--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -24,6 +24,42 @@
 	title = {{{countrycode}}: {{Convert}} Country Names and Country Codes},
 	volume = {3},
 	bdsk-url-1 = {https://CRAN.R-project.org/package=countrycode}}
+	
+@article{Liu2019,
+	author = {Liu, David M and Salganik, Matthew J},
+	journal = {Socius},
+	pages = {2378023119849803},
+	publisher = {SAGE Publications Sage CA: Los Angeles, CA},
+	title = {Successes and struggles with computational reproducibility: lessons from the fragile families challenge},
+	volume = {5},
+	year = {2019}}
+	
+@article{Kritzinger2025,
+	author = {Kritzinger, Sylvia and Lutz, Georg and Boomgaarden,Hajo},
+	date = {2025},
+	date-added = {2025-04-24 13:00:04 -0500},
+	date-modified = {2025-04-24 13:00:27 -0500},
+	ids = {Kritzinger2025},
+	journaltitle = {Working Paper},
+	title = {Visions for the future: Challenges and opportunities for creating sustainable scholarly infrastructures for data harmonization}}
+	
+@article{Koc2025,
+	author = {Koc,Piotr and Ko{\l}czy{\'n}ska, Marta},
+	date = {2025},
+	date-added = {2025-04-24 13:00:04 -0500},
+	date-modified = {2025-04-24 13:00:27 -0500},
+	ids = {Koc2025},
+	journaltitle = {Working Paper},
+	title = {Modeling Trends in Public Opinion: An Overview of Approaches, Assumptions and Trade-offs}}
+	
+@article{Slomczynsi2025,
+	author = {Slomczynsi,Kazmierz M. and Tomescu-Dubrow, Irina and Wysmulek, Ilona},
+	date = {2025},
+	date-added = {2025-04-23 13:00:04 -0500},
+	date-modified = {2025-04-23 13:00:27 -0500},
+	ids = {Slomczynsi2025},
+	journaltitle = {Working Paper},
+	title = {Navigating Complexities of Ex-Post Harmonization of Cross-national Survey Data: Insights from the Survey Data Recycling, SDR, Project}}
 
 @book{AtkinsonEtAl2021,
 	author = {Atkinson, Mary Layton and Coggins, K. Elizabeth and Stimson, James A. and Baumgartner, Frank R.},
